name:                yesod-paginator
version:             0.10.2
synopsis:            A pagination approach for yesod
description:         Paginate a list showing a per-item widget and links to other pages
homepage:            http://github.com/pbrisbin/yesod-paginator
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          pbrisbin@gmail.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: Yesod.Paginator
                   Yesod.Paginator.Widget

  build-depends: base       >= 4        && < 5
               , text       >= 0.11     && < 2.0
               , yesod      >= 1.4.1    && < 1.5
               , persistent >= 2.2.4      && < 2.3
               , esqueleto  >= 2.4.0      && < 2.5
               , resourcet  >= 1.1.5    && < 1.2
               , bytestring >= 0.10.4.0 && < 0.11
               , conduit    >= 1.2.4.2  && < 1.3
               , transformers >= 0.4.2

  ghc-options: -Wall -O2

source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-paginator.git
